--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,7 +28,10 @@ jobs:
           docker pull mcr.microsoft.com/playwright/java:v1.49.0-noble   
           docker run mcr.microsoft.com/playwright/java:v1.49.0-noble
      
-    
+    - name: Install Playwright dependency
+      run: |
+          docker exec test-container sudo mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install-deps"   
+          
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -36,5 +39,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean test -DsuiteXmlFile=testNGFiles/tests.xml 
+      run: mvn -q clean test -DsuiteXmlFile=testNGFiles/tests.xml 
 
