--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Debug Username and Password
+      run: |
+        echo "Docker Username: ${{ secrets.DOCKERHUBUSER }}"
+        echo "Password length: secrets.DOCKERHUBPASSWORD"
+    
     # Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
