--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,9 +28,9 @@ jobs:
     # Build the Docker image
     - name: Build Docker image
       run: |
-        docker build -t ${{secrets.DOCKERHUBUSER }}/playwrightsc:latest .
+        docker build -t ${{secrets.DOCKERUSER }}/playwrightsc:latest .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker image to Docker Hub
       run: |
-        docker push ${{secrets.DOCKERHUBUSER }}/playwrightsc:latest
+        docker push ${{secrets.DOCKERUSER }}/playwrightsc:latest
