--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,10 @@ jobs:
     # Checkout code
     - name: Checkout code
       uses: actions/checkout@v3
-
+    - name: Build with Maven if success or not
+      run: mvn install -DskipTests
+      continue-on-error: false
+      
     - name: Debug Username and Password
       run: |
         echo "Docker Username: ${{ secrets.DOCKERUSER }}"
